--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,17 @@
-/libvirt-dbus
+/AUTHORS
+/INSTALL
+/Makefile
+/Makefile.in
+/aclocal.m4
+/autom4te.cache/
+/build-aux/
+/config.h
+/config.h.in
+/config.log
+/config.status
+/configure
+/libvirt-dbus.spec
+/src/.deps/
+/src/Makefile
+/src/Makefile.in
+/stamp-h1
