--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,5 @@
+*.o
+
 /AUTHORS
 /INSTALL
 /Makefile
@@ -15,3 +17,6 @@
 /src/Makefile
 /src/Makefile.in
 /stamp-h1
+
+/src/libvirt-dbus
+/src/org.libvirt.service
