main: parameterize what to connect to
Accept `--session` and `--user` command line parameters, which control
which bus to connect to, and `--connect` to specify the libvirtd to
connect to.

By default, connect to `qemu:///system` and the system bus when running
as root, otherwise to `qemu:///session` and the session bus.

--- a/configure.ac
+++ b/configure.ac
@@ -6,6 +6,7 @@ AC_CONFIG_HEADERS([config.h])
 dnl Make automake keep quiet about wildcards & other GNUmake-isms
 AM_INIT_AUTOMAKE([foreign -Wno-portability])
 AC_CANONICAL_HOST
+AC_USE_SYSTEM_EXTENSIONS
 
 AM_SILENT_RULES([yes])
 
