spec: fix run-time dependency to systemd-libs
Signed-off-by: Pavel Hrdina <phrdina@redhat.com>

--- a/libvirt-dbus.spec.in
+++ b/libvirt-dbus.spec.in
@@ -17,7 +17,7 @@ BuildRequires: libvirt-devel >= %{libvirt_version}
 BuildRequires: systemd-devel >= %{systemd_version}
 
 Requires: libvirt-libs >= %{libvirt_version}
-Requires: systemd >= %{systemd_version}
+Requires: systemd-libs >= %{systemd_version}
 
 
 %description
