events: split event code into separate file
Similarly to the previous patch, split the code into its separate file.

Signed-off-by: Pavel Hrdina <phrdina@redhat.com>
Reviewed-by: John Ferlan <jferlan@redhat.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -5,7 +5,8 @@ DAEMON_SOURCES = \
 	main.c \
 	manager.c manager.h \
 	util.c util.h \
-	domain.c domain.h
+	domain.c domain.h \
+	events.c events.h
 
 EXTRA_DIST = \
 	$(DAEMON_SOURCES)
