domain: split domain code into separate file
Instead of having all code only in one file split it logically to have
one file for D-Bus object.

Signed-off-by: Pavel Hrdina <phrdina@redhat.com>
Reviewed-by: John Ferlan <jferlan@redhat.com>

--- a/src/Makefile.am
+++ b/src/Makefile.am
@@ -4,7 +4,8 @@ AM_CPPFLAGS = \
 DAEMON_SOURCES = \
 	main.c \
 	manager.c manager.h \
-	util.c util.h
+	util.c util.h \
+	domain.c domain.h
 
 EXTRA_DIST = \
 	$(DAEMON_SOURCES)
