terminal: Port to xterm.js
Xterm.js has the same API (minus a few constructor options) as term.js.
It also ships its own css file.

--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "redux": "3.5.2",
     "registry-image-widgets": "git+https://github.com/petervo/registry-image-widgets.git#0.0.4-package",
     "requirejs": "2.1.22",
-    "term.js-cockpit": "0.0.7"
+    "term.js-cockpit": "0.0.7",
+    "xterm": "2.8.1"
   },
   "optionalDependencies": {
     "phantomjs-prebuilt": "~2.1.14"
