maint: move service file into data directory
Signed-off-by: Pavel Hrdina <phrdina@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -22,6 +22,8 @@ vgcore.*
 /libvirt-dbus.spec
 /stamp-h1
 
+/data/session/org.libvirt.service
+
 /src/.deps/
 /src/libvirt-dbus
 /src/org.libvirt.service
