--- a/libvirt-dbus.spec.in
+++ b/libvirt-dbus.spec.in
@@ -42,5 +42,6 @@ rm -rf $RPM_BUILD_ROOT
 %doc README COPYING AUTHORS NEWS
 %{_bindir}/libvirt-dbus
 %{_datadir}/dbus-1/services/org.libvirt.service
+%{_datadir}/dbus-1/system-services/org.libvirt.service
 
 %changelog
