maint: cleanup gitignore
Signed-off-by: Pavel Hrdina <phrdina@redhat.com>

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,15 @@
-*.o
-*~
-vgcore.*
-*.pyc
-__pycache__
 *.log
+*.o
+*.pyc
 *.trs
+*Makefile
+*Makefile.in
+*~
+__pycache__
+vgcore.*
 
 /AUTHORS
 /INSTALL
-/Makefile
-/Makefile.in
 /aclocal.m4
 /autom4te.cache/
 /build-aux/
@@ -19,10 +19,8 @@ __pycache__
 /config.status
 /configure
 /libvirt-dbus.spec
-/src/.deps/
-/src/Makefile
-/src/Makefile.in
 /stamp-h1
 
+/src/.deps/
 /src/libvirt-dbus
 /src/org.libvirt.service
