build: move test related bits to test/Makefile.am
Signed-off-by: Pavel Hrdina <phrdina@redhat.com>

--- a/Makefile.am
+++ b/Makefile.am
@@ -1,5 +1,5 @@
 
-SUBDIRS = src
+SUBDIRS = src test
 
 EXTRA_DIST = \
 	$(PACKAGE).spec \
@@ -24,20 +24,3 @@ gen-AUTHORS:
 	    < $(srcdir)/AUTHORS.in > $(distdir)/AUTHORS-tmp &&        \
 	  mv -f $(distdir)/AUTHORS-tmp $(distdir)/AUTHORS ;           \
 	fi
-
-test_helpers = \
-	test/libvirttest.py
-
-test_programs = \
-	test/test_manager.py \
-	test/test_domain.py
-
-TESTS = $(test_programs)
-
-EXTRA_DIST += \
-	$(test_helpers) \
-	$(test_programs) \
-	test/travis-run
-
-TESTS_ENVIRONMENT = \
-	abs_top_builddir=$(abs_top_builddir)
