welder: Adjust manifest
C-S-P unsafe-* was only needed for the welder-web integration tests.

--- a/pkg/welder/manifest.json.in
+++ b/pkg/welder/manifest.json.in
@@ -1,5 +1,5 @@
 {
-    "version": "135",
+    "version": "@VERSION@",
     "requires": {
         "cockpit": "134"
     },
@@ -9,6 +9,5 @@
             "label": "Image Builder",
             "order": 30
         }
-    },
-    "content-security-policy": "default-src 'self' 'unsafe-eval'"
+    }
 }
