--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
     "term.js-cockpit": "0.0.8"
   },
   "optionalDependencies": {
-    "phantomjs-prebuilt": "~2.1.14"
+    "nightmare": "^2.10.0"
   },
   "devDependencies": {
     "babel-core": "^6.26.0",
