src: rename manager to connect
Manager was a good name for the original design.  However, the design
will be changed that for now libvirt-dbus will be using only local
connection and will support multiple drivers.

Reviewed-by: Daniel P. Berrange <berrange@redhat.com>
Signed-off-by: Pavel Hrdina <phrdina@redhat.com>

--- a/test/Makefile.am
+++ b/test/Makefile.am
@@ -2,7 +2,7 @@ test_helpers = \
 	libvirttest.py
 
 test_programs = \
-	test_manager.py \
+	test_connect.py \
 	test_domain.py
 
 TESTS = $(test_programs)
